--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://api-server:5000/",
+  "proxy": "http://test-api-server:5000/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
